jsonschemadsl2ecore.trafo.opt/test/test97/invalidtests/example6.test97
{
	"prop1":["foo",1],
	"prop2":["qux"],
	"prop3":[]
} 